[workspace]
resolver = "2"
members = [
    "model",
    "resources",
    "logic",

    "construction",
    "influence",
    "connection",
    "hud",
    "collision",

    "game",
    
    "milestones/milestone-01",
    "milestones/milestone-02",
    "milestones/milestone-03",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
