[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
resources = { path = "../resources" }
construction = { path = "../construction" }
influence = { path = "../influence" }
connection = { path = "../connection" }
hud = { path = "../hud" }
collision = { path = "../collision" }

bevy = "0.7.0"