[package]
name = "milestone-03"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../../model" }
game = { path = "../../game" }
resources = { path = "../../resources" }
construction = { path = "../../construction" }
influence = { path = "../../influence" }
connection = { path = "../../connection" }
hud = { path = "../../hud" }

bevy = "0.7.0"
